--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "bootstrap": "^4.6.0",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
     "react-scripts": "4.0.1",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.1.3"
   },
   "scripts": {
